--- a/ChatConsultantforAdmin/ChatConsultantforAdmin.csproj
+++ b/ChatConsultantforAdmin/ChatConsultantforAdmin.csproj
@@ -184,6 +184,7 @@
     </Content>
     <Content Include="scripts\bootstrap.js" />
     <Content Include="scripts\bootstrap.min.js" />
+    <Content Include="ClassDiagram1.cd" />
     <None Include="scripts\jquery-1.10.2-vsdoc.js" />
     <Content Include="scripts\jquery-1.10.2.js" />
     <Content Include="scripts\jquery-1.10.2.min.js" />
@@ -195,6 +196,7 @@
     <Content Include="scripts\jquery.validate.unobtrusive.js" />
     <Content Include="scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
+    <Content Include="scripts\serverInt.js" />
     <Content Include="Service References\Application Insights\ConnectedService.json" />
     <Content Include="views\Shared\Error.cshtml" />
     <Content Include="views\_ViewStart.cshtml" />
@@ -209,6 +211,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="scripts\jquery-1.10.2.min.map" />
+    <Content Include="views\Clients\index.cshtml" />
+    <Content Include="views\Messages\DialogWindow.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -219,7 +223,6 @@
   <ItemGroup>
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
-    <Content Include="views\dialogs.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -227,17 +230,22 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="controllers\AdminsController.cs" />
+    <Compile Include="controllers\ClientsController.cs" />
+    <Compile Include="controllers\MessagesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Hubs\ChatHub.cs" />
     <Compile Include="models\Admin.cs" />
     <Compile Include="models\AdminContext.cs" />
-    <Compile Include="models\MessageContext.cs" />
-    <Compile Include="models\Messages.cs" />
+    <Compile Include="models\Clients.cs" />
+    <Compile Include="models\ClientsContext.cs" />
+    <Compile Include="models\DialogsMessages.cs" />
+    <Compile Include="models\DialogsMessageContext.cs" />
     <Compile Include="models\UserContext.cs" />
     <Compile Include="models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
