full ninject installation
+ add other repository for dependencies
+ globalize declaration ninject core

--- a/ChatConsultantforAdmin/ChatConsultantforAdmin.csproj
+++ b/ChatConsultantforAdmin/ChatConsultantforAdmin.csproj
@@ -257,6 +257,7 @@
     <Compile Include="models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Util\NinjectRegistrations.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
